# fitness_bot

./: .gitignore  README.md  alembic.ini  db.sqlite3  env  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_tables.py  0002_added_admin_model.py
bot_config/: __init__.py  commands.py  rename.py  startup.py
keyboards/: __init__.py  admins.py  coaches.py  groups.py  pagination.py  schedules.py  shared_keyboard.py
logic/: __init__.py  admins.py  schedules.py  shared_logic.py
middleware/: __init__.py  intercept.py
models/: __init__.py  base.py  db_helper.py  main.py
routers/: __init__.py  admins.py  coaches.py  groups.py  schedules.py  shared_router.py
