[project]
name = "fitness-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Korepanov",email = "xthemaste20@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio (>=3.4.3,<4.0.0)",
    "aiogram (>=3.21.0,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "aiogram-calendar (>=0.6.0,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
